deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: efs-app-sts
spec:
  selector:
    matchLabels:
      app: test-efs
  serviceName: efs-app
  replicas: 1
  template:
    metadata:
      labels:
        app: test-efs
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: efs-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: efs-storage
        persistentVolumeClaim:
          claimName: efs-claim
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: test-efs
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
